# property

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example/: example.cpp
include/property/: property.hpp  system.hpp
src/: property.cpp  system.cpp
